--- a/pyconfig.ini
+++ b/pyconfig.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-base=C:\Users\anukh\Downloads\botc-translations-main
+base=.
 json=assets\json
 descriptions=assets\script_definitions
 scripts=assets\scripts
